# rustic-fist

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  j4.tape
docs/: index.md
fist_jsons/: CREDITS.md  roles.json  traits.json
fist_jsons/matrices/: mission_generator.json
fist_jsons/matrices/characters/: animals.json  celebrities.json  experiments.json  monsters.json  politicians.json  premade_enemies.json  premade_npcs.json  scientists.json  soldiers.json  squads.json
fist_jsons/matrices/factions/: aliens.json  corporations.json  criminals.json  insurgents.json
fist_jsons/matrices/gear/: base_upgrades.json  items.json  vehicles.json  weapons_and_armor.json
fist_jsons/matrices/locations/: battlefields.json  cities.json  nature.json  rooms.json  structures.json  zones.json
fist_jsons/matrices/lore/: artifacts.json  coverups.json  diplomacy.json  disasters.json  legends.json  spells.json
src/: fist.rs  inc.rs  main.rs  prelude.rs
