[package]
name = "rustic-fist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-ansi-term = "0.50.0"
rand = "0.8.5"
#crossterm = "0.27.0"
regex = "1.10.4"
rusqlite = "0.31.0"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
time = { version = "0.3.36", features =['local-offset']}
#tui-input = "*"
